--- a/user-center/src/main/resources/application.yml
+++ b/user-center/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/user_center
+    url: jdbc:mysql://localhost:3306/user_center?characterEncoding=utf8
     hikari:
       username: root
       password: 123456
