--- a/user-center/src/main/resources/bootstrap.yml
+++ b/user-center/src/main/resources/bootstrap.yml
@@ -8,4 +8,7 @@ spring:
       config:
         server-addr: localhost:8848
         file-extension: yml
-        namespace: dev
+        namespace: ${spring.profiles.active}
+      discovery:
+        server-addr: localhost:8848
+        namespace: ${spring.profiles.active}
