--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,18 +6,16 @@ spring:
   application:
     name: gateway
   cloud:
-    nacos:
-      discovery:
-        server-addr: localhost:8848
-        namespace: dev
-        username: nacos
-        password: nacos
-        group: DEFAULT_GROUP
     gateway:
       discovery:
         locator:
           # 让gateway通过服务发现组件找到其他的微服务
           enabled: true
+      routes:
+        - id: content-center
+          uri: lb://content-center
+          predicates:
+            - Path=/**
 management:
   endpoints:
     web:
