--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
   application:
     name: gateway
   cloud:
+    sentinel:
+      transport:
+        dashboard: localhost:8858
+      enabled: true
     gateway:
       discovery:
         locator:
@@ -16,6 +20,16 @@ spring:
           uri: lb://content-center
           predicates:
             - Path=/**
+        - id: aliyun_route
+          uri: https://www.aliyun.com/
+          predicates:
+            - Path=/product/**
+        - id: httpbin_route
+          uri: https://httpbin.org
+          predicates:
+            - Path=/httpbin/**
+          filters:
+            - RewritePath=/httpbin/(?<segment>.*), /$\{segment}
 management:
   endpoints:
     web:
